--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
+    "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.14",
+    "bcrypt": "^5.1.1",
     "formik": "^2.4.5",
+    "mongoose": "^8.1.0",
     "next": "14.0.4",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
     "yup": "^1.3.3"
